# stark

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  download_emb.py  emb_download.py  emb_generate.py  eval.py  generate_emb.py  load_dataset.ipynb  pyproject.toml  readme.md  requirements.txt
.github/workflows/: publish.yml
config/: default_args.json
data/amazon/: category_list.json
data/amazon/split/: test.index  train.index  val.index
data/amazon/stark_qa/: stark_qa.csv  stark_qa_human_written_eval.csv
data/mag/schema/: mag.json  reduced_mag.json
data/mag/split/: test.index  train.index  val.index
data/mag/stark_qa/: stark_qa.csv  stark_qa_human_generated_eval.csv
docs/: HYBRID_RETRIEVER.md
models/: __init__.py  bm25.py  colbert.py  llm_reranker.py  model.py  multi_vss.py  vss.py
src/benchmarks/: __init__.py  get_qa_dataset.py  get_semistruct.py
src/models/: __init__.py  llm_qa.py  llm_reranker.py  model.py  multi_vss.py  vss.py
src/tools/: api.py  args.py  download_hf.py  graph.py  io.py  node.py  operation.py  process_image.py  process_text.py  seed.py
stark_qa/: __init__.py  evaluator.py  load_model.py  load_qa.py  load_skb.py
stark_qa/models/: __init__.py  base.py  bm25.py  colbertv2.py  graph_retriever.py  hybrid.py  llm_reranker.py  multi_vss.py  vss.py
stark_qa/retrieval/: __init__.py  dataset.py
stark_qa/skb/: __init__.py  amazon.py  knowledge_base.py  mag.py  prime.py
stark_qa/tools/: api.py  args.py  download_hf.py  graph.py  io.py  local_encoder.py  loose_match.py  node.py  process_text.py
tests/: test_graph_retriever.py  test_hybrid.py
(+36 files in other folders)
